[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "us_oil"
version = "0.0.1"
description = "Crude oil imports to the U.S. from 2009 to 2024"
authors = ["Carlos Faustino"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]


[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["us_oil"]
force_sort_within_sections = true
